[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bypasshub"
version = "0.4.0"
description = "User management system for 'bypasshub'"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [{ name = "Saber Hayati", email = "SaberHayati@outlook.com" }]
keywords = ["ocserv", "OpenConnect", "Xray-core", "NGINX", "VPN", "Proxy"]
urls = { homepage = "https://github.com/Soberia/bypasshub" }
scripts = { bypasshub = "bypasshub.__main__:run" }
dependencies = [
    "orjson~=3.9.10",
    "httpx~=0.25.2",
    "fastapi~=0.105.0",
    "grpcio==1.60.0",
    "grpcio-tools==1.60.0",
    "uvicorn[standard]~=0.24.0"
]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Internet :: Proxy Servers",
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
packages = ["bypasshub"]
