[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bypasshub"
version = "0.4.2"
description = "User management system for 'bypasshub'"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [{ name = "Saber Hayati", email = "SaberHayati@outlook.com" }]
keywords = ["ocserv", "OpenConnect", "Xray-core", "NGINX", "VPN", "Proxy"]
urls = { homepage = "https://github.com/Soberia/bypasshub" }
scripts = { bypasshub = "bypasshub.__main__:run" }
dependencies = [
    "orjson~=3.10.1",
    "httpx~=0.27.0",
    "fastapi~=0.110.2",
    "grpcio==1.62.2",
    "grpcio-tools==1.62.2",
    "uvicorn[standard]~=0.29.0"
]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Internet :: Proxy Servers",
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
packages = ["bypasshub"]
