[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bypasshub"
version = "0.4.3"
description = "User management system for 'bypasshub'"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [{ name = "Saber Hayati", email = "SaberHayati@outlook.com" }]
keywords = ["ocserv", "OpenConnect", "Xray-core", "NGINX", "VPN", "Proxy"]
urls = { homepage = "https://github.com/Soberia/bypasshub" }
scripts = { bypasshub = "bypasshub.__main__:run" }
dependencies = [
    "orjson~=3.10.3",
    "httpx~=0.27.0",
    "fastapi~=0.111.0",
    "grpcio==1.64.1",
    "grpcio-tools==1.64.1",
    "uvicorn[standard]~=0.30.1"
]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Internet :: Proxy Servers",
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
packages = ["bypasshub"]
